# scrap500

./: .gitignore  LICENSE  README.md  autogen.sh  configure.ac
__run/: scrap500.db  scrap500.sqlite3.db  sysattrs.sqlite3.db
__run/data/: list-199306.1.html  list-199311.5.html  list-199506.2.html  list-199506.4.html  list-199511.4.html  list-199606.2.html  list-199611.5.html  list-199706.1.html  list-199706.2.html  list-199711.1.html  list-199711.5.html  list-199911.4.html  list-199911.5.html  list-200006.1.html  list-200006.2.html  list-200006.5.html  list-200106.2.html  list-200106.3.html  list-200206.2.html  list-200206.5.html  list-200211.3.html  list-200306.4.html  list-200306.5.html  list-200311.3.html  list-200406.2.html  list-200406.3.html  list-200411.4.html  list-200411.5.html  list-200506.2.html  list-200506.3.html  list-200606.5.html  list-200611.3.html  list-200611.4.html  list-200706.1.html  list-200706.4.html  list-200711.2.html  list-200806.3.html  list-200806.5.html  list-200811.5.html  list-200906.5.html  (+21 more)
__run/data/list/: 199306.2.html  199311.2.html  199311.3.html  199311.4.html  199406.3.html  199406.5.html  199411.2.html  199506.3.html  199511.5.html  199606.1.html  199606.3.html  199706.5.html  199711.4.html  199806.2.html  199806.3.html  199906.2.html  199906.5.html  199911.1.html  199911.2.html  200011.1.html  200011.2.html  200011.3.html  200011.4.html  200011.5.html  200106.1.html  200106.5.html  200111.1.html  200111.3.html  200211.5.html  200306.2.html  200311.4.html  200406.1.html  200406.5.html  200411.1.html  200411.2.html  200411.3.html  200506.4.html  200506.5.html  200511.2.html  200606.2.html  (+34 more)
__run/data/site/: 47224.html  47227.html  47231.html  47233.html  47241.html  47244.html  47248.html  47249.html  47252.html  47254.html  47257.html  47261.html  47265.html  47271.html  47273.html  47275.html  47276.html  47280.html  47284.html  47290.html  47295.html  47297.html  47305.html  47308.html  47318.html  47322.html  47324.html  47325.html  47326.html  47333.html  47335.html  47340.html  47345.html  47347.html  47348.html  47354.html  47358.html  47360.html  47364.html  47366.html  (+855 more)
__run/data/system/: 166664.html  166678.html  166689.html  166696.html  166700.html  166751.html  166753.html  166768.html  166803.html  166816.html  166818.html  166819.html  166820.html  166829.html  166833.html  166834.html  166839.html  166848.html  166849.html  166850.html  166858.html  166862.html  166866.html  166867.html  166882.html  166888.html  166890.html  166897.html  166900.html  166901.html  166930.html  166931.html  166933.html  166937.html  166942.html  166953.html  166954.html  166955.html  166958.html  166964.html  (+2454 more)
__run/scrap500/list/: 199306.3.html  199306.4.html  199306.5.html  199311.1.html  199406.1.html  199406.2.html  199406.4.html  199411.1.html  199411.3.html  199411.4.html  199411.5.html  199506.1.html  199506.5.html  199511.1.html  199511.2.html  199511.3.html  199606.4.html  199606.5.html  199611.1.html  199611.2.html  199611.3.html  (+104 more)
src/: Makefile.am  getsysattrs.c  scrap500-build.c  scrap500-db.c  scrap500-fetch.c  scrap500-http.c  scrap500-parser.c  scrap500-schema.c  scrap500.c  scrap500.h  scrap500.schema.sqlite3.sql
(+10482 files in other folders)
